--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,13 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ラスボス退治アプリ</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/frontend/src/main.jsx"></script>
+    <!-- ★ここを修正 -->
+    <script type="module" src="/src/main.jsx"></script>
+    <!-- 相対パス派なら  ./src/main.jsx でもOK -->
   </body>
 </html>
