Update script source path for main.jsx

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- ★ここを修正 -->
-    <script type="module" src="/src/main.jsx"></script>
-    <!-- 相対パス派なら  ./src/main.jsx でもOK -->
+
+    <!-- React のメインファイルを読み込む -->
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
