--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- ★ここを修正 -->
-    <!-- 相対パス派なら  ./src/main.jsx でもOK -->
+
+    <!-- React のメインファイルを読み込む -->
   </body>
 </html>
