--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ラスボス退治アプリ</title>
+    <title>Chappy & Sally App</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- React のメインファイルを読み込む -->
     <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
