--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chappy & Sally App</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>ラスボス退治アプリ</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- Vite がビルド時に適切な資産へ書き換えます -->
     <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
