--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,16 @@
+<!-- frontend/index.html -->
 <!doctype html>
 <html lang="ja">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
     <title>ラスボス退治アプリ</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Vite がビルド時に適切な資産へ書き換えます -->
-    <script type="module" src="./src/main.jsx"></script>
+    <!-- Vite は src/main.jsx を読む想定。ファイル名もパスも厳密！ -->
+    <script type="module" src="/lboss-app/src/main.jsx"></script>
   </body>
 </html>
