--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0" />
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>ラスボス退治アプリ</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Vite は src/main.jsx を読む想定。ファイル名もパスも厳密！ -->
-    <script type="module" src="/lboss-app/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
