--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,16 +1,13 @@
-<!-- frontend/index.html -->
 <!doctype html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>ラスボス退治アプリ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>💥ラスボス退治アプリ</title>
+    <meta name="description" content="あなたの中のラスボスを診断して、光のステージへ✨" />
   </head>
-  <body>
+  <body style="margin:0;">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/frontend/src/main.jsx"></script>
   </body>
 </html>
